--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">Header</div>
-    <div class="cover">Cover</div>
-    <div class="grid">Project Grid</div>
-    <footer>footer</footer>
+    <nav class="zone green">
+        <ul class="main-nav">
+            <li><a href="">About</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Our Team</a></li>
+            <li class="push"><a href="">Contacts</a></li>
+        </ul>    
+    </nav>
+    <div class="zone red">Cover</div>
+    <div class="zone blue">Project Grid</div>
+    <div class="zone yellow">Footer</div>
 </body>
 </html>
