--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </nav>
     <div class="container zone red">Cover</div>
     <div class="zone blue grid-wrapper">
-        <div class="box zone"><img src="logos/Marys Bean - Logo 03.jpg"></div>
-        <div class="box zone"><img src="logos/Marys Bean - Logo 04.jpg"></div>
-        <div class="box zone"><img src="logos/Marys Bean - Logo 05.jpg"></div>
-        <div class="box zone"><img src="logos/Marys Bean - Logo 06.jpg"></div>
+        <div class="box zone"><img src="logos/download.jpg"></div>
+        <div class="box zone"><img src="logos/download.jpg"></div>
+        <div class="box zone"><img src="logos/download.jpg"></div>
+        <div class="box zone"><img src="logos/download.jpg"></div>
     </div>
     <div class="zone yellow">Footer</div>
 </body>
