--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="box zone"><img src="logos/download.jpg"></div>
         <div class="box zone"><img src="logos/download.jpg"></div>
     </div>
-    <div class="zone yellow">Footer</div>
+
+    <footer class="zone yellow">Footer</footer>
 </body>
 </html>
