--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="zone green">
         <ul class="main-nav">
             <li><a href="">About</a></li>
-            <li><a href="">Products</a></li>
+            <li><a href="">Mers</a></li>
             <li><a href="">Our Team</a></li>
             <li class="push"><a href="">Contacts</a></li>
         </ul>    
@@ -23,6 +23,6 @@
         <div class="box zone"><img src="logos/download.jpg"></div>
     </div>
 
-    <footer class="zone yellow">Footer</footer>
+    <footer class="zone yellow">siteTest</footer>
 </body>
 </html>
