stick_zone_green

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="zone green">
+    <nav class="zone green sticky">
         <ul class="main-nav">
             <li><a href="">About</a></li>
-            <li><a href="">Mers</a></li>
-            <li><a href="">Our Team</a></li>
+            <li><a href="">Merchandising</a></li>
+            <li><a href="">Fotos</a></li>
             <li class="push"><a href="">Contacts</a></li>
         </ul>    
     </nav>
-    <div class="container zone red">Cover</div>
+    <div class="container zone white"><img class="cover" src="logos/Marys Bean - Logo 05.jpg" alt="logoMarysBean"></div>
     <div class="zone blue grid-wrapper">
         <div class="box zone"><img src="logos/download.jpg"></div>
         <div class="box zone"><img src="logos/download.jpg"></div>
