--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
     <nav class="zone green sticky">
         <ul class="main-nav">
             <li><a href="">About</a></li>
@@ -15,6 +16,7 @@
             <li class="push"><a href="">Contacts</a></li>
         </ul>    
     </nav>
+</header>
     <div class="container zone white"><img class="cover" src="logos/Marys Bean - Logo 05.jpg" alt="logoMarysBean"></div>
     <div class="zone blue grid-wrapper">
         <div class="box zone"><img src="logos/download.jpg"></div>
