--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
 <header>
-    <nav class="zone green sticky">
-        <ul class="main-nav">
-            <li><a href="">About</a></li>
-            <li><a href="">Merchandising</a></li>
-            <li><a href="">Fotos</a></li>
-            <li class="push"><a href="">Contacts</a></li>
-        </ul>    
+    <nav class="zone black sticky">
+        <div class="logo">
+            <a href="#">Início</a>
+        </div>
+            <ul class="main-nav">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Merchandising</a></li>
+                <li><a href="#">Fotos</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>    
     </nav>
 </header>
     <div class="container zone white"><img class="cover" src="logos/Marys Bean - Logo 05.jpg" alt="logoMarysBean"></div>
