--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <a href="#">Início</a>
         </div>
             <ul class="main-nav">
-                <li><a href="#">About</a></li>
+                <li><a href="#">Sobre</a></li>
                 <li><a href="#">Merchandising</a></li>
                 <li><a href="#">Fotos</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Contactos</a></li>
             </ul>    
     </nav>
 </header>
-    <div class="container zone white"><img class="cover" src="logos/Marys Bean - Logo 05.jpg" alt="logoMarysBean"></div>
+    <div class="container zone white"></div>
     <div class="zone blue grid-wrapper">
         <div class="box zone"><img src="logos/download.jpg"></div>
         <div class="box zone"><img src="logos/download.jpg"></div>
