--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Merchandising</a></li>
                 <li><a href="#">Fotos</a></li>
+                <li><a href="#">Agenda</a></li>
                 <li><a href="#">Contactos</a></li>
             </ul>    
     </nav>
 </header>
-    <div class="container zone white"></div>
+    <div class="container zone"><img class="cover" src="logos/DSC_0148.JPG"></div>
     <div class="zone blue grid-wrapper">
-        <div class="box zone"><img src="logos/download.jpg"></div>
-        <div class="box zone"><img src="logos/download.jpg"></div>
-        <div class="box zone"><img src="logos/download.jpg"></div>
-        <div class="box zone"><img src="logos/download.jpg"></div>
+        <div class="box zone"><img class="gato" src="logos/download.jpg"></div>
+        <div class="box zone"><img class="gato" src="logos/download.jpg"></div>
+        <div class="box zone"><img class="gato" src="logos/download.jpg"></div>
+        <div class="box zone"><img class="gato" src="logos/download.jpg"></div>
     </div>
 
     <footer class="zone yellow">siteTest</footer>
